# nlp-potawatomi

./: .gitignore  LICENSE  README.md  index.py  pyproject.toml
potnlp/stem/: base.py
potnlp/tag/: base.py
potnlp/tokenizer/: potawatomi.py
potnlp/utility/: base.py
tests/: test_mapping_definition.py
