[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nlp_potawatomi"
authors = [{name = "Steve Livingston", email = "toledosteve@icloud.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
description-file = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
